# sga_momentum_degradation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pre_flwr_run.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
analysis/: dataset.ipynb  mnist_resnet18_analysis.ipynb
src/: client_app.py  data_loader.py  server_app.py
src/ml_models/: net.py  res_net_18.py  utils.py
src/plots/: results.json
src/plots/federated_learning/: mnist_resnet18_results.json
src/plots/federated_unlearning/: mnist_resnet18_results.json
src/plots/retraining/: mnist_resnet18_results.json
src/scripts/: helper.py  prepare_dataset.py
src/server_components/: aggregate_evaluate.py  aggregate_fit.py  configure_evaluate.py  configure_fit.py  helper.py  server_init.py
src/utils/: logger.py
