[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sga_momentum_degradation"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
unlearning-trigger-client = 0
unlearning-trigger-round = 101
num-of-clients = 5
momentum = 0.9
num-server-rounds = 120
num-batches-each-round = 5
weight-factor-degradation-model = 0.50
weight-factor-global-model = 0.95
fraction-evaluate = 1
local-epochs = 3
learning-rate = 0.005
degraded-model-refinement-learning-rate = 0.01
degraded-model-unlearning-rate = 0.005
batch-size = 128
dataset-name = "mnist"
data-loader-alpha = 0.1
prepare-dataset = false

# Paths
logs-folder-path = "log"
dataset-folder-path = "src/clients_dataset"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring"]
